# databricks-environments

./: README.md
.github/scripts/: envgen.py  sync.py
.github/workflows/: sync.yml
python/dbr/13.3.x-cpu-ml-scala2.12/: constraints.txt  pyproject.toml
python/dbr/13.3.x-gpu-ml-scala2.12/: constraints.txt  pyproject.toml
python/dbr/13.3.x-scala2.12/: constraints.txt  pyproject.toml
python/dbr/14.3.x-cpu-ml-scala2.12/: constraints.txt  pyproject.toml
python/dbr/14.3.x-gpu-ml-scala2.12/: constraints.txt  pyproject.toml
python/dbr/14.3.x-scala2.12/: constraints.txt  pyproject.toml
python/dbr/15.4.x-cpu-ml-scala2.12/: constraints.txt  pyproject.toml
python/dbr/15.4.x-gpu-ml-scala2.12/: constraints.txt  pyproject.toml
python/dbr/15.4.x-scala2.12/: constraints.txt  pyproject.toml
python/dbr/16.4.x-cpu-ml-scala2.12/: constraints.txt  pyproject.toml
python/dbr/16.4.x-gpu-ml-scala2.12/: constraints.txt  pyproject.toml
python/dbr/16.4.x-scala2.12/: constraints.txt  pyproject.toml
python/dbr/17.3.x-cpu-ml-scala2.13/: constraints.txt  pyproject.toml
python/dbr/17.3.x-gpu-ml-scala2.13/: constraints.txt  pyproject.toml
python/dbr/17.3.x-scala2.13/: constraints.txt  pyproject.toml
python/dbr/18.0.x-cpu-ml-scala2.13/: constraints.txt  pyproject.toml
python/dbr/18.0.x-gpu-ml-scala2.13/: constraints.txt  pyproject.toml
python/dbr/18.0.x-scala2.13/: constraints.txt  pyproject.toml
python/dbr/19.0.x-cpu-ml-scala2.13/: constraints.txt  pyproject.toml
python/dbr/19.0.x-gpu-ml-scala2.13/: constraints.txt  pyproject.toml
python/dbr/19.0.x-scala2.13/: constraints.txt  pyproject.toml
python/serverless/serverless-v1/: constraints.txt  pyproject.toml
python/serverless/serverless-v2/: constraints.txt  pyproject.toml
python/serverless/serverless-v3/: constraints.txt  pyproject.toml
python/serverless/serverless-v4/: constraints.txt  pyproject.toml
python/serverless/serverless-v5/: constraints.txt  pyproject.toml
python/serverless/serverless-v5-ml/: constraints.txt  pyproject.toml
scripts/: envgen.py  gen_pyproject.py  sync.py
