# pyproject.toml file for Databricks Runtime 18.0.x-gpu-ml-scala2.13

[project]
name = "constraint-env-18-0-x-gpu-ml-scala2-13"
version = "0.1.0"
requires-python = "==3.12.*"

[dependency-groups]
dev = [
    "databricks-connect~=18.0.0",
]

[tool.uv]
constraint-dependencies = [
    "absl-py~=2.3.1",
    "accelerate~=1.11.0",
    "aiohappyeyeballs~=2.4.4",
    "aiohttp~=3.11.10",
    "aiohttp-cors~=0.8.1",
    "aiosignal~=1.2.0",
    "annotated-doc~=0.0.4",
    "annotated-types~=0.7.0",
    "anyio~=4.7.0",
    "argon2-cffi~=21.3.0",
    "argon2-cffi-bindings~=21.2.0",
    "arro3-core~=0.6.5",
    "arrow~=1.3.0",
    "asttokens~=3.0.0",
    "astunparse~=1.6.3",
    "async-lru~=2.0.4",
    "attrs~=24.3.0",
    "audioread~=3.1.0",
    "azure-common~=1.1.28",
    "azure-core~=1.36.0",
    "azure-cosmos~=4.3.1",
    "azure-identity~=1.20.0",
    "azure-mgmt-core~=1.6.0",
    "azure-mgmt-web~=8.0.0",
    "azure-storage-blob~=12.27.1",
    "azure-storage-file-datalake~=12.22.0",
    "babel~=2.16.0",
    "bcrypt~=4.3.0",
    "beautifulsoup4~=4.12.3",
    "black~=24.10.0",
    "bleach~=6.2.0",
    "blinker~=1.7.0",
    "blis~=0.7.11",
    "boto3~=1.40.45",
    "botocore~=1.40.45",
    "brotli~=1.2.0",
    "cachetools~=5.5.1",
    "catalogue~=2.0.10",
    "certifi~=2025.4.26",
    "cffi~=1.17.1",
    "chardet~=4.0.0",
    "charset-normalizer~=3.3.2",
    "circuitbreaker~=2.1.3",
    "click~=8.1.8",
    "cloudpathlib~=0.23.0",
    "cloudpickle~=3.0.0",
    "cmdstanpy~=1.3.0",
    "colorful~=0.5.8",
    "colorlog~=6.10.1",
    "comm~=0.2.1",
    "confection~=0.1.5",
    "contourpy~=1.3.1",
    "cramjam~=2.11.0",
    "cryptography~=44.0.1",
    "cycler~=0.11.0",
    "cymem~=2.0.12",
    "cython~=3.1.5",
    "dacite~=1.9.2",
    "databricks-agents~=1.9.1",
    "databricks-feature-engineering~=0.13.0.1",
    "databricks-sdk~=0.67.0",
    "dataclasses-json~=0.6.7",
    "datasets~=4.3.0",
    "dbl-tempo~=0.1.26",
    "debugpy~=1.8.11",
    "decorator~=5.1.1",
    "deepspeed~=0.18.1",
    "defusedxml~=0.7.1",
    "deltalake~=1.1.4",
    "deprecated~=1.2.18",
    "dill~=0.3.8",
    "distlib~=0.3.9",
    "dm-tree~=0.1.9",
    "docstring-to-markdown~=0.11",
    "einops~=0.8.1",
    "evaluate~=0.4.6",
    "executing~=1.2.0",
    "facets-overview~=1.1.1",
    "farama-notifications~=0.0.4",
    "fastapi~=0.121.2",
    "fastjsonschema~=2.21.1",
    "filelock~=3.17.0",
    "filetype~=1.2.0",
    "flash-attn~=2.8.3",
    "flask~=2.2.5",
    "flatbuffers~=25.9.23",
    "fonttools~=4.55.3",
    "fqdn~=1.5.1",
    "frozenlist~=1.5.0",
    "fsspec~=2023.5.0",
    "gast~=0.6.0",
    "gitdb~=4.0.11",
    "gitpython~=3.1.43",
    "google-api-core~=2.28.1",
    "google-auth~=2.43.0",
    "google-cloud-core~=2.5.0",
    "google-cloud-storage~=3.2.0",
    "google-crc32c~=1.7.1",
    "google-pasta~=0.2.0",
    "google-resumable-media~=2.7.2",
    "googleapis-common-protos~=1.65.0",
    "graphql-core~=3.2.4",
    "greenlet~=3.1.1",
    "grpcio~=1.67.0",
    "grpcio-status~=1.67.0",
    "gymnasium~=0.28.1",
    "h11~=0.16.0",
    "h5py~=3.12.1",
    "hf-xet~=1.2.0",
    "hjson~=3.1.0",
    "holidays~=0.54",
    "httpcore~=1.0.9",
    "httplib2~=0.20.4",
    "httpx~=0.28.1",
    "huggingface-hub~=0.36.0",
    "idna~=3.7",
    "imagehash~=4.3.1",
    "imageio~=2.37.0",
    "imbalanced-learn~=0.13.0",
    "importlib-metadata~=8.5.0",
    "iniconfig~=1.1.1",
    "ipyflow-core~=0.0.209",
    "ipykernel~=6.29.5",
    "ipython~=8.30.0",
    "ipython-genutils~=0.2.0",
    "ipywidgets~=7.8.1",
    "isodate~=0.7.2",
    "isoduration~=20.11.0",
    "itsdangerous~=2.2.0",
    "jax-jumpy~=1.0.0",
    "jedi~=0.19.2",
    "jinja2~=3.1.6",
    "jiter~=0.12.0",
    "jmespath~=1.0.1",
    "joblib~=1.4.2",
    "joblibspark~=0.6.0",
    "json5~=0.9.25",
    "jsonpatch~=1.33",
    "jsonpointer~=3.0.0",
    "jsonschema~=4.23.0",
    "jsonschema-specifications~=2023.7.1",
    "jupyter~=1.1.1",
    "jupyter-client~=8.6.3",
    "jupyter-console~=6.6.3",
    "jupyter-core~=5.7.2",
    "jupyter-events~=0.12.0",
    "jupyter-lsp~=2.2.5",
    "jupyter-server~=2.15.0",
    "jupyter-server-terminals~=0.5.3",
    "jupyterlab~=4.3.4",
    "jupyterlab-pygments~=0.3.0",
    "jupyterlab-server~=2.27.3",
    "jupyterlab-widgets~=1.1.11",
    "keras~=3.12.0",
    "kiwisolver~=1.4.8",
    "langchain~=1.0.3",
    "langchain-core~=1.0.4",
    "langchain-openai~=1.0.2",
    "langcodes~=3.5.0",
    "langgraph~=1.0.3",
    "langgraph-checkpoint~=3.0.1",
    "langgraph-prebuilt~=1.0.4",
    "langgraph-sdk~=0.2.9",
    "langsmith~=0.4.41",
    "language-data~=1.3.0",
    "launchpadlib~=1.11.0",
    "lazr-restfulclient~=0.14.6",
    "lazr-uri~=1.0.6",
    "lazy-loader~=0.4",
    "libclang~=15.0.6.1",
    "librosa~=0.11.0",
    "lightgbm~=4.6.0",
    "linkify-it-py~=2.0.0",
    "litellm~=1.75.9",
    "llvmlite~=0.44.0",
    "lz4~=4.3.2",
    "mako~=1.3.10",
    "marisa-trie~=1.2.0",
    "markdown~=3.8",
    "markdown-it-py~=2.2.0",
    "markupsafe~=3.0.2",
    "marshmallow~=3.26.1",
    "matplotlib~=3.10.0",
    "matplotlib-inline~=0.1.7",
    "mccabe~=0.7.0",
    "mdit-py-plugins~=0.3.0",
    "mdurl~=0.1.0",
    "memray~=1.19.1",
    "minify-html~=0.18.1",
    "mistune~=3.1.2",
    "ml-dtypes~=0.5.3",
    "mlflow-skinny~=3.8.1",
    "mmh3~=5.2.0",
    "mosaicml-streaming~=0.13.0",
    "mpmath~=1.3.0",
    "msal~=1.34.0",
    "msal-extensions~=1.3.1",
    "msgpack~=1.1.2",
    "multidict~=6.1.0",
    "multimethod~=1.12",
    "multiprocess~=0.70.16",
    "murmurhash~=1.0.14",
    "mypy-extensions~=1.0.0",
    "namex~=0.1.0",
    "nbclient~=0.10.2",
    "nbconvert~=7.16.6",
    "nbformat~=5.10.4",
    "nest-asyncio~=1.6.0",
    "networkx~=3.4.2",
    "ninja~=1.13.0",
    "nltk~=3.9.1",
    "nodeenv~=1.9.1",
    "notebook~=7.3.2",
    "notebook-shim~=0.2.4",
    "numba~=0.61.0",
    "numpy~=2.1.3",
    "nvidia-cublas-cu12~=12.9.1.4",
    "nvidia-cuda-cupti-cu12~=12.9.79",
    "nvidia-cuda-nvrtc-cu12~=12.9.86",
    "nvidia-cuda-runtime-cu12~=12.9.79",
    "nvidia-cudnn-cu12~=9.10.2.21",
    "nvidia-cufft-cu12~=11.4.1.4",
    "nvidia-cufile-cu12~=1.14.1.1",
    "nvidia-curand-cu12~=10.3.10.19",
    "nvidia-cusolver-cu12~=11.7.5.82",
    "nvidia-cusparse-cu12~=12.5.10.65",
    "nvidia-cusparselt-cu12~=0.7.1",
    "nvidia-ml-py~=13.580.82",
    "nvidia-nccl-cu12~=2.27.5",
    "nvidia-nvjitlink-cu12~=12.9.86",
    "nvidia-nvshmem-cu12~=3.3.20",
    "nvidia-nvtx-cu12~=12.9.79",
    "oauthlib~=3.2.0",
    "oci~=2.163.1",
    "openai~=2.7.0",
    "opencensus~=0.11.4",
    "opencensus-context~=0.1.3",
    "opentelemetry-api~=1.38.0",
    "opentelemetry-proto~=1.38.0",
    "opentelemetry-sdk~=1.38.0",
    "opentelemetry-semantic-conventions~=0.59b0",
    "opt-einsum~=3.4.0",
    "optree~=0.17.0",
    "optuna~=3.6.1",
    "optuna-integration~=3.6.0",
    "orjson~=3.11.4",
    "ormsgpack~=1.12.0",
    "overrides~=7.4.0",
    "packaging~=24.2",
    "pandas~=2.2.3",
    "pandocfilters~=1.5.0",
    "paramiko~=3.5.1",
    "parso~=0.8.4",
    "pathspec~=0.10.3",
    "patsy~=1.0.1",
    "pexpect~=4.8.0",
    "phik~=0.12.5",
    "pillow~=11.1.0",
    "platformdirs~=4.3.7",
    "plotly~=5.24.1",
    "pluggy~=1.5.0",
    "pooch~=1.8.2",
    "preshed~=3.0.11",
    "prometheus-client~=0.21.1",
    "prompt-toolkit~=3.0.43",
    "propcache~=0.3.1",
    "prophet~=1.2.1",
    "proto-plus~=1.26.1",
    "protobuf~=5.29.4",
    "psutil~=5.9.0",
    "psycopg2~=2.9.11",
    "ptyprocess~=0.7.0",
    "pure-eval~=0.2.2",
    "puremagic~=1.30",
    "py-cpuinfo~=9.0.0",
    "py-spy~=0.4.1",
    "pyarrow~=21.0.0",
    "pyasn1~=0.4.8",
    "pyasn1-modules~=0.2.8",
    "pyccolo~=0.0.71",
    "pycparser~=2.21",
    "pydantic~=2.10.6",
    "pydantic-core~=2.27.2",
    "pyflakes~=3.2.0",
    "pygments~=2.19.1",
    "pyiceberg~=0.10.0",
    "pyjwt~=2.10.1",
    "pynacl~=1.5.0",
    "pyodbc~=5.2.0",
    "pyopenssl~=25.0.0",
    "pyparsing~=3.2.0",
    "pyright~=1.1.394",
    "pyroaring~=1.0.3",
    "pytesseract~=0.3.10",
    "pytest~=8.3.5",
    "python-dateutil~=2.9.0.post0",
    "python-dotenv~=1.2.1",
    "python-editor~=1.0.4",
    "python-json-logger~=3.2.1",
    "python-lsp-jsonrpc~=1.1.2",
    "python-lsp-server~=1.12.2",
    "python-snappy~=0.7.3",
    "pytoolconfig~=1.2.6",
    "pytz~=2024.1",
    "pywavelets~=1.8.0",
    "pyyaml~=6.0.2",
    "pyzmq~=26.2.0",
    "ray~=2.37.0",
    "referencing~=0.30.2",
    "regex~=2024.11.6",
    "requests~=2.32.3",
    "requests-toolbelt~=1.0.0",
    "rfc3339-validator~=0.1.4",
    "rfc3986-validator~=0.1.1",
    "rich~=13.9.4",
    "rope~=1.13.0",
    "rpds-py~=0.22.3",
    "rsa~=4.9.1",
    "s3transfer~=0.14.0",
    "safetensors~=0.6.2",
    "scikit-image~=0.25.0",
    "scikit-learn~=1.6.1",
    "scipy~=1.15.3",
    "seaborn~=0.13.2",
    "send2trash~=1.8.2",
    "sentence-transformers~=5.1.2",
    "sentencepiece~=0.2.1",
    "setuptools~=78.1.1",
    "shap~=0.49.1",
    "shellingham~=1.5.4",
    "six~=1.17.0",
    "sklearn-compat~=0.1.3",
    "slicer~=0.0.8",
    "smart-open~=7.5.0",
    "smmap~=5.0.0",
    "sniffio~=1.3.0",
    "sortedcontainers~=2.4.0",
    "soundfile~=0.13.1",
    "soupsieve~=2.5",
    "soxr~=1.0.0",
    "spacy~=3.7.5",
    "spacy-legacy~=3.0.12",
    "spacy-loggers~=1.0.5",
    "sqlalchemy~=2.0.39",
    "sqlparse~=0.5.3",
    "srsly~=2.5.1",
    "ssh-import-id~=5.11",
    "stack-data~=0.6.3",
    "stanio~=0.5.1",
    "starlette~=0.49.3",
    "statsmodels~=0.14.4",
    "strictyaml~=1.7.3",
    "sympy~=1.13.3",
    "tenacity~=9.0.0",
    "tensorboard~=2.20.0",
    "tensorboard-data-server~=0.7.2",
    "tensorboardx~=2.6.4",
    "tensorflow~=2.20.0",
    "termcolor~=3.2.0",
    "terminado~=0.17.1",
    "textual~=4.0.0",
    "tf-keras~=2.20.1",
    "thinc~=8.2.4",
    "threadpoolctl~=3.5.0",
    "tifffile~=2025.2.18",
    "tiktoken~=0.9.0",
    "tinycss2~=1.4.0",
    "tokenize-rt~=6.1.0",
    "tokenizers~=0.22.1",
    "tomli~=2.0.1",
    "torch==2.9.0+cu129",
    "torcheval~=0.0.7",
    "torchvision==0.24.0+cu129",
    "tornado~=6.5.1",
    "tqdm~=4.67.1",
    "traitlets~=5.14.3",
    "transformers~=4.57.1",
    "triton~=3.5.0",
    "typer~=0.20.0",
    "typer-slim~=0.20.0",
    "types-python-dateutil~=2.9.0.20251108",
    "typing-extensions~=4.12.2",
    "typing-inspect~=0.9.0",
    "tzdata~=2024.1",
    "uc-micro-py~=1.0.1",
    "ujson~=5.10.0",
    "uri-template~=1.3.0",
    "urllib3~=2.3.0",
    "uvicorn~=0.38.0",
    "virtualenv~=20.29.3",
    "visions~=0.8.1",
    "wadllib~=1.3.6",
    "wasabi~=1.1.3",
    "wcwidth~=0.2.5",
    "weasel~=0.4.3",
    "webcolors~=25.10.0",
    "webencodings~=0.5.1",
    "websocket-client~=1.8.0",
    "werkzeug~=3.1.3",
    "whatthepatch~=1.0.2",
    "wheel~=0.45.1",
    "whenever~=0.7.3",
    "widgetsnbextension~=3.6.6",
    "wordcloud~=1.9.4",
    "wrapt~=1.17.0",
    "xgboost~=3.1.1",
    "xgboost-ray~=0.1.19",
    "xxhash~=3.5.0",
    "yapf~=0.40.2",
    "yarl~=1.18.0",
    "ydata-profiling~=4.17.0",
    "zipp~=3.21.0",
    "zstandard~=0.23.0",
    "zstd~=1.5.5.1",
]
