# pyproject.toml file for Databricks Runtime 19.0.x-cpu-ml-scala2.13

[project]
name = "constraint-env-19-0-x-cpu-ml-scala2-13"
version = "0.1.0"
requires-python = "==3.12.*"

[dependency-groups]
dev = [
    "databricks-connect~=19.0.0",
]

[tool.uv]
constraint-dependencies = [
    "absl-py~=2.3.1",
    "accelerate~=1.13.0",
    "aiohappyeyeballs~=2.6.1",
    "aiohttp~=3.13.2",
    "aiohttp-cors~=0.8.1",
    "aiosignal~=1.4.0",
    "alembic~=1.18.4",
    "annotated-doc~=0.0.4",
    "annotated-types~=0.7.0",
    "anyio~=4.10.0",
    "arro3-core~=0.8.0",
    "asttokens~=3.0.0",
    "astunparse~=1.6.3",
    "attrs~=25.4.0",
    "audioread~=3.1.0",
    "azure-core~=1.41.0",
    "azure-cosmos~=4.3.1",
    "azure-identity~=1.25.3",
    "azure-mgmt-core~=1.6.0",
    "azure-mgmt-web~=10.1.0",
    "azure-storage-blob~=12.29.0",
    "azure-storage-file-datalake~=12.24.0",
    "black~=25.9.0",
    "blinker~=1.7.0",
    "blis~=1.3.3",
    "boto3~=1.40.46",
    "botocore~=1.40.46",
    "cachetools~=5.5.1",
    "catalogue~=2.0.10",
    "certifi~=2025.11.12",
    "cffi~=2.0.0",
    "charset-normalizer~=3.4.4",
    "click~=8.2.1",
    "cloudpathlib~=0.24.0",
    "cloudpickle~=3.1.1",
    "cmdstanpy~=1.3.0",
    "colorful~=0.5.8",
    "colorlog~=6.10.1",
    "comm~=0.2.3",
    "confection~=1.3.3",
    "contourpy~=1.3.3",
    "cryptography~=46.0.3",
    "cycler~=0.11.0",
    "cymem~=2.0.13",
    "databricks-agents~=1.10.2",
    "databricks-feature-engineering~=0.13.0.1",
    "databricks-sdk~=0.108.0",
    "dataclasses-json~=0.6.7",
    "datasets~=4.8.5",
    "dbl-tempo~=0.1.26",
    "debugpy~=1.8.16",
    "decorator~=5.2.1",
    "deepspeed~=0.19.0",
    "deltalake~=1.5.1",
    "deprecated~=1.3.1",
    "dill~=0.4.0",
    "distlib~=0.4.0",
    "dm-tree~=0.1.10",
    "einops~=0.8.2",
    "evaluate~=0.4.6",
    "executing~=2.2.1",
    "farama-notifications~=0.0.6",
    "fastapi~=0.136.1",
    "filelock~=3.20.0",
    "flask~=2.2.5",
    "fonttools~=4.60.1",
    "frozenlist~=1.8.0",
    "fsspec~=2023.5.0",
    "gitdb~=4.0.11",
    "gitpython~=3.1.45",
    "google-api-core~=2.30.3",
    "google-auth~=2.53.0",
    "google-cloud-core~=2.6.0",
    "google-cloud-storage~=3.10.1",
    "google-crc32c~=1.8.0",
    "google-resumable-media~=2.9.0",
    "googleapis-common-protos~=1.71.0",
    "graphql-core~=3.2.4",
    "greenlet~=3.2.4",
    "grpcio~=1.76.0",
    "grpcio-status~=1.76.0",
    "gymnasium~=0.28.1",
    "h11~=0.16.0",
    "hf-xet~=1.5.0",
    "hjson~=3.1.0",
    "holidays~=0.54",
    "httpcore~=1.0.9",
    "httplib2~=0.20.4",
    "httpx~=0.28.1",
    "huggingface-hub~=0.36.2",
    "idna~=3.11",
    "imageio~=2.37.2",
    "imbalanced-learn~=0.14.0",
    "importlib-metadata~=8.7.0",
    "iniconfig~=2.1.0",
    "ipyflow-core~=0.0.227",
    "ipykernel~=6.31.0",
    "ipython~=9.7.0",
    "ipython-pygments-lexers~=1.1.1",
    "ipywidgets~=8.1.7",
    "isodate~=0.7.2",
    "itsdangerous~=2.2.0",
    "jax-jumpy~=1.0.0",
    "jedi~=0.19.2",
    "jinja2~=3.1.6",
    "jiter~=0.15.0",
    "jmespath~=1.0.1",
    "joblib~=1.5.2",
    "joblibspark~=0.6.0",
    "jsonpatch~=1.33",
    "jsonpointer~=3.1.1",
    "jsonschema~=4.25.0",
    "jsonschema-specifications~=2025.9.1",
    "jupyter-client~=8.6.3",
    "jupyter-core~=5.8.1",
    "jupyterlab-widgets~=3.0.15",
    "kiwisolver~=1.4.8",
    "langchain~=1.3.1",
    "langchain-core~=1.4.0",
    "langchain-protocol~=0.0.15",
    "langgraph~=1.2.1",
    "langgraph-checkpoint~=4.1.1",
    "langgraph-prebuilt~=1.1.0",
    "langgraph-sdk~=0.3.15",
    "langsmith~=0.4.41",
    "launchpadlib~=1.11.0",
    "lazr-restfulclient~=0.14.6",
    "lazr-uri~=1.0.6",
    "lazy-loader~=0.4",
    "librosa~=0.11.0",
    "lightgbm~=4.6.0",
    "linkify-it-py~=2.0.3",
    "llvmlite~=0.45.1",
    "lz4~=4.4.5",
    "mako~=1.3.12",
    "marisa-trie~=1.2.0",
    "markdown~=3.8",
    "markdown-it-py~=2.2.0",
    "markupsafe~=3.0.2",
    "marshmallow~=3.26.2",
    "matplotlib~=3.10.6",
    "matplotlib-inline~=0.2.1",
    "mccabe~=0.7.0",
    "mdit-py-plugins~=0.5.0",
    "mdurl~=0.1.2",
    "memray~=1.19.3",
    "mlflow-skinny~=3.12.0",
    "mmh3~=5.2.1",
    "mpmath~=1.3.0",
    "msal~=1.36.0",
    "msal-extensions~=1.3.1",
    "msgpack~=1.1.2",
    "msrest~=0.7.1",
    "multidict~=6.7.0",
    "multiprocess~=0.70.18",
    "murmurhash~=1.0.15",
    "mypy-extensions~=1.0.0",
    "nest-asyncio~=1.6.0",
    "networkx~=3.5",
    "ninja~=1.13.0",
    "nltk~=3.9.2",
    "nodeenv~=1.10.0",
    "numba~=0.62.1",
    "numpy~=2.3.4",
    "nvidia-nccl-cu12~=2.30.4",
    "oauthlib~=3.2.0",
    "openai~=2.37.0",
    "opencensus~=0.11.4",
    "opencensus-context~=0.1.3",
    "opentelemetry-api~=1.42.1",
    "opentelemetry-proto~=1.42.1",
    "opentelemetry-sdk~=1.42.1",
    "opentelemetry-semantic-conventions~=0.63b1",
    "optuna~=3.6.1",
    "optuna-integration~=3.6.0",
    "orjson~=3.11.9",
    "ormsgpack~=1.12.2",
    "packaging~=25.0",
    "pandas~=2.3.3",
    "parso~=0.8.5",
    "pathspec~=0.12.1",
    "patsy~=1.0.1",
    "pexpect~=4.9.0",
    "pillow~=12.0.0",
    "platformdirs~=4.5.0",
    "pluggy~=1.5.0",
    "pooch~=1.9.0",
    "preshed~=3.0.13",
    "prometheus-client~=0.21.1",
    "prompt-toolkit~=3.0.52",
    "propcache~=0.3.1",
    "prophet~=1.2.1",
    "proto-plus~=1.28.0",
    "protobuf~=6.33.5",
    "psutil~=7.0.0",
    "ptyprocess~=0.7.0",
    "pure-eval~=0.2.3",
    "py-cpuinfo~=9.0.0",
    "py-spy~=0.4.2",
    "pyarrow~=21.0.0",
    "pyasn1~=0.6.1",
    "pyasn1-modules~=0.4.2",
    "pyccolo~=0.0.83",
    "pycparser~=2.23",
    "pydantic~=2.13.3",
    "pydantic-core~=2.46.3",
    "pyflakes~=3.2.0",
    "pygments~=2.19.2",
    "pyiceberg~=0.11.1",
    "pyjwt~=2.10.1",
    "pyparsing~=3.2.5",
    "pyright~=1.1.409",
    "pyroaring~=1.1.0",
    "pytesseract~=0.3.13",
    "pytest~=8.4.2",
    "python-dateutil~=2.9.0.post0",
    "python-dotenv~=1.2.2",
    "python-editor~=1.0.4",
    "pytokens~=0.2.0",
    "pytz~=2025.2",
    "pyyaml~=6.0.3",
    "pyzmq~=27.1.0",
    "ray~=2.37.0",
    "referencing~=0.37.0",
    "regex~=2025.9.1",
    "requests~=2.32.5",
    "requests-oauthlib~=2.0.0",
    "requests-toolbelt~=1.0.0",
    "rich~=14.2.0",
    "rpds-py~=0.28.0",
    "s3transfer~=0.14.0",
    "safetensors~=0.7.0",
    "scikit-image~=0.25.2",
    "scikit-learn~=1.7.2",
    "scipy~=1.16.3",
    "sentence-transformers~=5.5.1",
    "sentencepiece~=0.2.1",
    "setuptools~=80.9.0",
    "shap~=0.51.0",
    "shellingham~=1.5.4",
    "six~=1.17.0",
    "slicer~=0.0.8",
    "smart-open~=7.6.1",
    "smmap~=5.0.0",
    "sniffio~=1.3.0",
    "soundfile~=0.13.1",
    "soxr~=1.1.0",
    "spacy~=3.8.14",
    "spacy-legacy~=3.0.12",
    "spacy-loggers~=1.0.5",
    "sqlalchemy~=2.0.43",
    "sqlparse~=0.5.5",
    "srsly~=2.5.3",
    "ssh-import-id~=5.11",
    "stack-data~=0.6.3",
    "stanio~=0.5.1",
    "starlette~=0.52.1",
    "statsmodels~=0.14.5",
    "strictyaml~=1.7.3",
    "sympy~=1.14.0",
    "tenacity~=9.1.2",
    "tensorboard~=2.20.0",
    "tensorboard-data-server~=0.7.2",
    "tensorboardx~=2.6.5",
    "textual~=8.2.7",
    "thinc~=8.3.13",
    "threadpoolctl~=3.5.0",
    "tifffile~=2025.10.4",
    "tiktoken~=0.13.0",
    "tokenize-rt~=6.2.0",
    "tokenizers~=0.22.1",
    "tomli~=2.0.1",
    "torch==2.12.0+cpu",
    "torcheval~=0.0.7",
    "torchvision==0.27.0+cpu",
    "tornado~=6.5.1",
    "tqdm~=4.67.1",
    "traitlets~=5.14.3",
    "transformers~=4.57.6",
    "typer~=0.25.1",
    "typing-extensions~=4.15.0",
    "typing-inspect~=0.9.0",
    "typing-inspection~=0.4.2",
    "tzdata~=2026.2",
    "uc-micro-py~=1.0.3",
    "urllib3~=2.5.0",
    "uuid-utils~=0.16.0",
    "uvicorn~=0.47.0",
    "virtualenv~=20.35.4",
    "wadllib~=1.3.6",
    "wasabi~=1.1.3",
    "wcwidth~=0.2.13",
    "weasel~=1.0.0",
    "werkzeug~=3.1.3",
    "wheel~=0.45.1",
    "whenever~=0.7.3",
    "widgetsnbextension~=4.0.14",
    "wrapt~=1.17.0",
    "xgboost~=3.2.0",
    "xgboost-ray~=0.1.19",
    "xxhash~=3.5.0",
    "yarl~=1.22.0",
    "zipp~=3.23.0",
    "zstandard~=0.25.0",
]
